Remove db and set navigation on cert by dirs in public static dir

--- a/views/get_contributors/show.html.erb
+++ b/views/get_contributors/show.html.erb
@@ -1,6 +1,6 @@
 <h1>
   contributors
-  <pre>
-    <%= data %>
-  </pre>
+    <% certs.each do | cert | %>
+      <a href="<%= cert[:url] %>"><%= cert[:owner] %></a>
+    <% end %>
 </h1>
